# Marrow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tree.txt
examples/: erroneous.marrow  hello.marrow
marrow/: endec.py  environment.py  logger.py  tooling.py  types.py
marrow/cli/: __main__.py  parser.py
marrow/compiler/: common.py  compiler.py  components.py  resources.py  types.py
marrow/compiler/backend/: bytecode.py  funcs.py  generator.py  instruction.py  macroop.py
marrow/compiler/backend/macro/: generator.py  ops.py
marrow/compiler/backend/micro/: ops.py
marrow/compiler/frontend/: ptsc.py  token.py  token_type.py  tokenizer.py
marrow/compiler/frontend/ast/: expr.py
marrow/compiler/frontend/parser/: base.py  parser.py  precedence.py
marrow/compiler/frontend/parser/subparsers/: __init__.py  atomexpr.py  nonprefixexpr.py  prefixexpr.py
marrow/compiler/middleend/SSAIR/: generator.py  instruction.py  rvalue.py
marrow/compiler/renderers/: __init__.py  bytecode.py  macroop.py  parse_tree.py  rvalue.py  util.py
marrow/runtime/: constants.py  endec.py  machine.py  rat.py
marrow/runtime/alu/: alu.py  op.py
