[project]
name = "marrow"
version = "0.1.0"
readme = "README.md"

requires-python = ">=3.12"
dependencies = ["anstrip>=0.2,<0.3", "attrs>=23.2,<23.3", "result>=0.16,<0.17"]

[[project.authors]]
name = "Qexat"
email = "contact@qexat.com"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "isort>=5.13,<6.0",
    "pre-commit>=3.7,<4.0",
    "pyright>=1.1,<2.0",
    "ruff>=0.4,<1.0",
]

[project.scripts]
marrow = "marrow.cli.__main__:main"

[tool.ruff.lint.isort]
force-single-line = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
